# Breakout-Opengl-Practice

./: CMakeLists.txt  README.md
modules/glad/include/glad/: glad.h
src/: BreakoutConfig.h.in  main.cc
src/breakout/: ballObject.cpp  ballObject.h  game.cpp  game.h  gameLevel.cpp  gameLevel.h  gameObject.cpp  gameObject.h  gameSetting.cpp  gameSetting.h  particleGenerator.cpp  particleGenerator.h  postProcessor.cpp  postProcessor.h  powerUp.h  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  spriteRenderer.cpp  spriteRenderer.h  textRenderer.cpp  textRenderer.h  texture.cpp  texture.h
src/glad/: glad.c
src/shader/: particle.frag  particle.vs  postProcess.frag  postProcess.vert
